--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,21 +1,32 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 html{
     font-size: 62.5%;
 }
 body {
     font-family: sans-serif;
     max-width: 140rem;
-    min-height: 100vh;
+    height: 100%;
     font-size: 1.8rem;
     font-weight: 500;
     box-sizing:border-box;
     margin: 0 auto;
-    overflow: hidden;
+    overflow-x: hidden;
     padding: 0;
     color:#333;
     background-color: bisque;
-}.header{
-    margin-bottom: 20rem;
-
+}
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+.header{
+    margin-bottom: 10rem;
+    padding: 2rem;
 }
 .main-nav{
     padding: 2rem;
@@ -25,8 +36,8 @@ body {
     justify-items: center;
 }
 .logo{
-    max-width: 10rem;
-    height: 10rem;
+    max-width: 8rem;
+    height: 8rem;
     cursor: pointer;
 }
 .nav-links{
@@ -39,20 +50,34 @@ body {
 .nav-link{
     text-decoration: none;
     color: #333;
+    transition: all 400ms;
 }
-.section-hero{
-    margin-bottom: 20rem;
+.nav-link:hover,
+.nav-link:active{
+    box-shadow: inset 0 -0.3rem 0 0 #333;
+    padding-bottom: 0.3rem;
+}
+.main-content{
+    flex: 1
+}
+.section-hero,
+.section-features{
+    margin-bottom: 10rem;
+    padding: 2rem;
 
 }
-.section-features{
-    margin-bottom: 20rem;
-}
 .footer-section{
-    position: fixed;
-    text-align: center;
-    left: 0;
-    bottom: 0;
     width: 100%;
-    padding: 2rem;
+    max-width: 140rem;
+    margin: 0 auto;
+    text-align: center;
     color: #666;
 }
+.noselect {
+    -webkit-touch-callout: none; 
+      -webkit-user-select: none; 
+       -khtml-user-select: none; 
+         -moz-user-select: none; 
+          -ms-user-select: none; 
+              user-select: none; 
+  }
